<resources>
    <string name="app_name">Homework07</string>
    <string name="google_web_client_ID">588080469714-lqrflv0bknhnvgr8l25p6nhmovoc4uig.apps.googleusercontent.com</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonLogin">Login</string>
    <string name="hintMessageText">Say something</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintRepeat">One more time</string>
    <string name="hintFirstname">Firstname</string>
    <string name="hintLastname">Lastname</string>
    <string name="labelGender">Gender</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="buttonSignout">Log Out User</string>
    <string name="menuProfile">Profile </string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="facebook_app_id">1855470204688714</string>
    <string name="full_name">%1$s %2$s</string>
</resources>
